# resturantbot

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  Makefile  RESTAURANT_BOT_PLAN.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  railway.json
alembic/: env.py
scripts/: seed_demo.py
src/restaurant_bot/: __init__.py  config.py  dependencies.py  main.py
src/restaurant_bot/agent/: core.py  deps.py
src/restaurant_bot/agent/prompts/: system.py
src/restaurant_bot/agent/tools/: info_tools.py  menu_tools.py  order_tools.py  reservation_tools.py
src/restaurant_bot/api/v1/: analytics.py  auth.py  auto_replies.py  chat.py  config.py  faqs.py  menu.py  orders.py  reservations.py  router.py  tables.py  webhooks.py
src/restaurant_bot/auth/: jwt.py  permissions.py
src/restaurant_bot/channels/: base.py  rest_api.py  telegram.py  whatsapp.py
src/restaurant_bot/db/: base.py  engine.py
src/restaurant_bot/db/models/: __init__.py  conversation.py  (+4 more)
src/restaurant_bot/middleware/: logging.py  rate_limit.py  tenant.py
src/restaurant_bot/schemas/: chat.py  config.py  menu.py  order.py  reservation.py  restaurant.py
src/restaurant_bot/services/: analytics_service.py  auto_reply_service.py  config_service.py  customer_service.py  menu_service.py  notification_service.py  order_service.py  reservation_service.py
src/restaurant_bot/session/: base.py  cart.py  memory.py  redis_store.py
src/restaurant_bot/static/: admin.html  chat.html  demo.html  widget.js
src/restaurant_bot/utils/: order_number.py  pricing.py
tests/: conftest.py
