[project]
name = "restaurant-bot"
version = "0.1.0"
description = "AI-powered restaurant bot - plug and play, channel-agnostic, multi-tenant"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "gunicorn>=23.0",
    "pydantic-ai>=0.2",
    "anthropic>=0.42",
    "openai>=1.60",
    "sqlalchemy[asyncio]>=2.0.51",
    "alembic>=1.18",
    "aiosqlite>=0.20",
    "asyncpg>=0.30",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.0",
    "python-multipart>=0.0.9",
    "redis>=5.0",
    "pydantic-settings>=2.5",
    "httpx>=0.27",
    "jinja2>=3.1",
    "structlog>=24.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
